# bare-buffer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.c  global.d.ts  global.js  index.d.ts  index.js  package.json  test.js
.github/workflows/: ci.yml  prebuild.yml  test.yml
lib/: ascii.js  base64.js  base64url.js  constants.d.ts  constants.js  hex.js  latin1.js  utf16le.js  utf8.js
test/: all.js  ascii.js  base64.js  base64url.js  basic.js  hex.js  latin1.js  utf16le.js  utf8.js
test/bench/: base64.js  compare.js  hex.js  utf16le.js  utf8.js
